Mac OS metadata removed